--- a/src/containers/style.css
+++ b/src/containers/style.css
@@ -13,9 +13,9 @@
 }
 
 .div_Triangle {
-  border-top: 5rem solid red;
-  border-bottom: 5rem solid blue;
+  border-top: 5rem solid transparent;
+  border-bottom: 5rem solid green;
   border-left: 5rem solid green;
-  border-right: 5rem solid gray;
+  border-right: 5rem solid transparent;
   display: inline-block;
 }
