--- a/src/containers/style.css
+++ b/src/containers/style.css
@@ -97,6 +97,14 @@ body {
   transform: rotate(25deg);
 }
 
+.div_eyebrow {
+  top: -1rem;
+  border-top: 0rem solid;
+  border-bottom: 1rem solid #221d21;
+  border-left: 1rem solid transparent;
+  border-right: 4rem solid transparent;
+}
+
 .div_eye {
   height: 1.6rem;
   width: 3.2rem;
