--- a/src/containers/style.css
+++ b/src/containers/style.css
@@ -1,5 +1,10 @@
 @value eye: #ed2528;
 
+.h_center {
+  left: 50%;
+  transform: translateX(-50%);
+}
+
 .div_Box {
   height: 5rem;
   width: 5rem;
@@ -73,8 +78,9 @@ body {
   background: #ed2629;
   border-radius: 0 0 3rem 3rem;
   top: 18rem;
-  left: 50%;
-  transform: translateX(-50%);
+  composes: h_center;
+}
+
 }
 
 .div_nose {
@@ -83,8 +89,7 @@ body {
   background: linear-gradient(to bottom, #cecebf 30%, #eceed9 100%);
   border-radius: 0 0 1rem 1rem;
   top: 15rem;
-  left: 50%;
-  transform: translateX(-50%);
+  composes: h_center;
 }
 
 .div_eye_border_left {
@@ -109,8 +114,7 @@ body {
   width: 3.2rem;
   border-radius: 0 0 1.6rem 1.6rem;
   background: eye;
-  left: 50%;
-  transform: translateX(-50%);
+  composes: h_center;
   box-shadow: -0.2rem 0.1rem 0 0.1rem black
 }
 
