--- a/src/containers/style.css
+++ b/src/containers/style.css
@@ -79,6 +79,7 @@ body {
   border-radius: 0 0 3rem 3rem;
   top: 18rem;
   composes: h_center;
+  overflow: hidden;
 }
 
 .div_top_teeth_left {
@@ -100,6 +101,21 @@ body {
   width: 60%;
   background: white;
   composes: h_center;
+}
+
+.div_bottom_teeth_left {
+  bottom: 0;
+  left: 1rem;
+  border-top: 0rem solid;
+  border-bottom: 1rem solid white;
+  border-left: 0.5rem solid transparent;
+  border-right: 0.5rem solid transparent;
+}
+
+.div_bottom_teeth_right {
+  composes: div_bottom_teeth_left;
+  left: auto;
+  right: 1rem;
 }
 
 .div_nose {
