--- a/src/containers/PieChart/style.css
+++ b/src/containers/PieChart/style.css
@@ -1,3 +1,89 @@
+
 .divRoot {
   color: blue;
+}
+
+.PieChart {
+  position:absolute;
+  width:50px;
+  height:100px;
+  overflow:hidden;
+  border-radius:0 50px 50px 0;
+  -webkit-animation:a 5s infinite linear;
+}
+
+.PieChart:before, .PieChart:after{
+  content:"";
+  box-sizing:border-box;
+  position:absolute;
+  top:0;
+  right:0; 
+  width:100px;
+  height:50px;
+  background:#0ce;
+  border-style:solid;
+  border-color:#000;
+  border-width:6px 6px 0;
+  border-radius:50px 50px 0 0;
+  transform-origin:50px 50px;
+}
+
+.PieChart:before{
+  z-index:1;
+  -webkit-animation:a1 5s infinite linear;
+  transform:rotate(-90deg);
+}
+
+.PieChart:after{
+  opacity:0;
+  z-index:2;
+  transform:rotate(90deg);
+  -webkit-animation:a2 5s infinite linear;
+}
+
+@-webkit-keyframes a1{
+  0%{ 
+    transform:rotate(-90deg);
+  }
+  100%{ 
+    transform:rotate(270deg);
+  }
+}
+
+@-webkit-keyframes a2{
+  0%{
+    opacity:0;
+  }
+  49.99%{
+    opacity:0;
+  }
+  50%{
+    opacity:1;
+  }
+  100%{
+    opacity:1;
+  }
+}
+
+@-webkit-keyframes a{
+  0%{
+    margin-left:50px;
+    width:50px;
+    border-radius:0 50px 50px 0;
+  }
+  49.99%{
+    margin-left:50px;
+    width:50px;
+    border-radius:0 50px 50px 0;
+  }
+  50%{
+    margin-left:0;
+    width:100px;
+    border-radius:0;
+  }
+  100%{
+    margin-left:0;
+    width:100px;
+    border-radius:0;
+  }
 }
