--- a/src/containers/PieChart/style.css
+++ b/src/containers/PieChart/style.css
@@ -1,4 +1,7 @@
 
+@value pie_chart_width: 100px;
+@value pie_chart_height: 50px; /* half of width */
+
 .divRoot {
   color: blue;
 }
@@ -18,14 +21,14 @@
   position:absolute;
   top:0;
   right:0; 
-  width:100px;
-  height:50px;
+  width: pie_chart_width;
+  height: pie_chart_height;
   background:#0ce;
   border-style:solid;
   border-color:#000;
   border-width:6px 6px 0;
   border-radius:50px 50px 0 0;
-  transform-origin:50px 50px;
+  transform-origin:50% 100%;
 }
 
 .pie_chart:before{
